Second phase is done, one test failing